add test AuctionAtomicWithStopTest